# University-Registration-Form-API

./: main.py  pyproject.toml
