[tool.poetry]
name = "university-assignment"
version = "0.1.0"
description = ""
authors = ["Farrukh Zaman <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = "^0.34.0"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
